--- a/src/components/button/IconButton.module.css
+++ b/src/components/button/IconButton.module.css
@@ -1,4 +1,5 @@
 .button{
+  cursor: pointer;
   width: fit-content;
   height: fit-content;
   
@@ -7,6 +8,12 @@
   outline: none;
 
   transition: all .3s ease;
+}
+
+@media screen and (min-width: 769px) {
+  .button:hover{
+    transform: scale(1.1);
+  }
 }
 
 .button:active{
