--- a/src/components/link/IconLink.module.css
+++ b/src/components/link/IconLink.module.css
@@ -1,12 +1,11 @@
 .link{
-  width: fit-content;
-  height: fit-content;
-  
-  background-color: transparent;
-  border: none;
-  outline: none;
-
   transition: all .3s ease;
+}
+
+@media screen and (min-width: 769px) {
+  .link:hover{
+    transform: scale(1.1);
+  }
 }
 
 .link:active{
