--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,4 @@
-.container{
-  display: flex;
-  flex-flow: column wrap;
-  gap: 50px;
+.container > h1{
+  text-align: center;
+  padding-bottom: 10px;
 }
