--- a/src/components/cards/HighlightCard.module.css
+++ b/src/components/cards/HighlightCard.module.css
@@ -19,8 +19,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  
-  min-height: 100%;
+
+  min-height: calc(100% + 15px);
   min-width: 100%;
   backdrop-filter: blur(7px);
 }
