--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -34,6 +34,15 @@
 .body{
   background-color: var(--color-background);
 }
-.body *{
+
+.body h1,
+.body h2,
+.body h3,
+.body h4,
+.body h5,
+.body h6,
+.body p,
+.body span,
+.body li{
   color: var(--color);
 };
