--- a/src/components/containers/AdContainer.module.css
+++ b/src/components/containers/AdContainer.module.css
@@ -1,5 +1,5 @@
 .ad_container{
-  padding: 50px 30px 0px 30px;
+  padding: 50px 30px;
 
   display: grid;
   grid-template-rows: auto 1fr;
@@ -19,4 +19,20 @@
   max-height: 500px;
 
   justify-self: center;
+}
+
+@media screen and (min-width: 769px) {
+  .ad_container{
+    padding: 100px 60px;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    gap: 80px;
+  }
+  .children_container{
+    width: 100%;
+    max-width: 460px;
+    gap: 60px;
+  }
 }
