--- a/src/components/containers/AdContainer.module.css
+++ b/src/components/containers/AdContainer.module.css
@@ -1,8 +1,8 @@
 .ad_container{
   padding: 50px 30px;
 
-  display: grid;
-  grid-template-rows: auto 1fr;
+  display: flex;
+  flex-flow: column nowrap;
   gap: 40px;
 }
 
@@ -18,14 +18,13 @@
   height: 100%;
   max-height: 500px;
 
-  justify-self: center;
+  align-self: center;
 }
 
 @media screen and (min-width: 769px) {
   .ad_container{
     padding: 100px 60px;
 
-    display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     gap: 80px;
