--- a/src/components/containers/AdvertisementContainer.module.css
+++ b/src/components/containers/AdvertisementContainer.module.css
@@ -1,4 +1,7 @@
-.container{
+.test{
+  padding: 10px;
+}
+.section_container{
   padding: 50px 30px;
 
   display: flex;
@@ -13,17 +16,18 @@
 }
 
 .image{
-  width: min-content;
+  width: auto;
   height: 100%;
   max-height: 500px;
-
+  
   align-self: center;
 }
 
 @media screen and (min-width: 769px) {
-  .container{
+  .section_container{
     padding: 100px 60px;
-
+    
+    display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     gap: 80px;
