--- a/src/components/cards/ProjectCard.module.css
+++ b/src/components/cards/ProjectCard.module.css
@@ -21,6 +21,7 @@
 .children_container{
   display: flex;
   flex-flow: column nowrap;
+  align-items: center;
   gap: 20px;
 
   text-align: center;
