--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,10 +3,6 @@
   padding-bottom: 10px;
 }
 
-.project_paragraph{
-  font-size: .9em;
-}
-
 .icon{
   fill: var(--color-main);
 }
@@ -14,4 +10,25 @@
 .ad_container{
   padding-bottom: 0px !important;
   background-image: var(--color-gradient);
+}
+
+.service_container{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 30px;
+}
+.service_icon{
+  font-size: 50px;
+  color: var(--color);
+}
+.service_link{
+  margin-top: auto;
+}
+
+.assessment_container{
+  border-top: 2px solid var(--color);
+  border-bottom: 2px solid var(--color);
+
+  align-items: center;
 }
