--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -26,9 +26,54 @@
   margin-top: auto;
 }
 
-.assessment_container{
+.assessment_section{
+  overflow: hidden;
+  align-items: center;
+  gap: 50px !important;
+
   border-top: 2px solid var(--color);
   border-bottom: 2px solid var(--color);
-
+}
+.assessment_container{
+  position: relative;
+}
+.assessment_logo{
+  width: 80px;
+  height: 80px;
+}
+.assessment{
   align-items: center;
+  text-align: center;
+
+  transition: all 3s cubic-bezier(.01, .39, .7, 1);
+}
+.assessment_left_left{
+  position: absolute;
+  top: 0%;
+  left: -280%;
+  opacity: 0;
+  
+  transform: scale(0);
+}
+.assessment_left{
+  position: absolute;
+  top: 0%;
+  left: -10%;
+  
+  transform: scale(.8) translate(-130%, -0%);
+}
+.assessment_right{
+  position: absolute;
+  top: 0%;
+  left: 10%;
+  
+  transform: scale(.8) translate(130%, -0%);
+}
+.assessment_right_right{
+  position: absolute;
+  top: 0%;
+  left: 280%;
+  opacity: 0;
+  
+  transform: scale(0);
 }
