--- a/src/components/link/SectionLink.module.css
+++ b/src/components/link/SectionLink.module.css
@@ -1,27 +1,16 @@
 .link{
   width: fit-content;
-  padding: 10px 13px;
 
   display: flex;
-  flex-flow: row wrap;
-  gap: 5px;
-  align-items: center;
+  flex-flow: column wrap;
+  gap: 10px;
 
-  background-color: var(--color);
-  box-shadow: 1px 1px 3px var(--color-blackS);
-  border-radius: 5px;
-
-  font-weight: 600;
-  color: var(--color-background);
+  color: var(--color);
   text-decoration: none;
+
   transition: all .3s ease;
 }
 
-.highlight{
-  background-color: var(--color-main);
-  color: var(--color);
-  font-weight: 600;
-}
 
 .link:active{
   transform: translate(3px, 3px);
@@ -32,7 +21,7 @@
   .link:hover{
     transform: scale(1.1);
   }
-  
+
   .link:active{
     transform: scale(1.1) translate(3px, 3px);
     transition: all .1s ease;
