--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,14 @@ h3{
   font-size: 1.35em;
   font-weight: 600;
 }
+h4{
+  font-size: 1.15em;
+  font-weight: 600;
+}
+h5{
+  font-size: 1em;
+  font-weight: 800;
+}
 p{
   font-size: 1em;
   font-weight: 400;
