--- a/src/app/contato/page.module.css
+++ b/src/app/contato/page.module.css
@@ -9,6 +9,10 @@
   text-align: center;
 }
 
+.ad_container{
+  padding-bottom: 0px !important;
+}
+
 @media screen and (min-width: 769px) {
   .main > h1{
     padding-top: 100px;
