--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,24 @@
   --color-gradient: linear-gradient(135deg, var(--color-vermelho), var(--color-azul-aço)); 
 }
 
+::-webkit-scrollbar{
+  width: 0px;
+  height: 5px;
+}
+@media screen and (min-width: 769px) {
+  ::-webkit-scrollbar{
+    width: 10px;
+    height: 10px;
+  }
+}
+
+::-webkit-scrollbar-thumb{
+  cursor: pointer;
+  background-color: var(--color);
+  border: 2px solid var(--color-background);
+  border-radius: 2px;
+}
+
 *{
   margin: 0px;
   padding: 0px;
