--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,17 +89,24 @@ p{
   font-size: .9em;
 }
 
-/* @media screen and (min-width: 769px) {
+@media screen and (min-width: 769px) {
   h1{
     font-size: 2.4em;
   }
   h2{
-    font-size: 2.1em;
+    font-size: 2em;
   }
   h3{
-    font-size: 1.8em;
+    font-size: 1.6em;
   }
+  h4{
+    font-size: 1.3em;
+  }
+  h5,
   p{
     font-size: 1.15em;
   }
-} */
+  .p_small{
+    font-size: 1em;
+  }
+}
