--- a/src/components/layouts/Cookies.module.css
+++ b/src/components/layouts/Cookies.module.css
@@ -1,12 +1,13 @@
 .container{
   --color: var(--color-preto);
   --color-background: var(--color-branco);
+  margin: 10px;
   padding: 20px;
   max-width: 500px;
 
   position: fixed;
-  left: 10px;
-  bottom: 10px;
+  left: 0px;
+  bottom: 0px;
   z-index: 5;
 
   display: flex;
